2006-10-18  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JEditorPane.java
	(getStream): Try to detect and set the content type of the
	connection stream.

2006-10-18  Roman Kennke  <kennke@aicas.com>

	* javax/swing/RepaintManager.java
	(RepaintWorkerEvent): Pass full set of params to super.
	(RepaintWorker.dispatch): Overridden to allow apps to call this
	via reflection.
	(addDirtyRegion): Synchronize a little more to protect the
	dirtyComponents field and avoid NPEs.
	(invokeLater): Pass full set of params to RepaintWorkerEvent
	constructor.

2006-10-18  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JEditorPane.java
	(page): Removed field. The page is now stored in the correct
	document property.
	(getPage): Fetch page URL from document property.
	(read): Set the document for this JEditorPane. Use a Reader
	for reading in the document.
	(setPage): Call getStream() to get the stream from which we read.
	Fire property change. Store page in document property.

2006-10-18  Roman Kennke  <kennke@aicas.com>

	* java/awt/datatransfer/DataFlavor.java
	(DataFlavor(String)): Removed check for space in mime string.

2006-10-18  Roman Kennke  <kennke@aicas.com>

	* java/awt/Container.java
	(validateTree): Call ContainerPeer.begin|endLayout() rather than
	begin|endValidate().
	(validate): Call ContainerPeer.begin|endValidate() here.
	Added some local vars to avoid NPEs.

2006-10-18  Roman Kennke  <kennke@aicas.com>

	* native/target/.cvsignore
	* native/target/Linux/.cvsignore
	* native/target/generic/.cvsignore:
	Added to let CVS ignore the generated Makefile and Makefile.in
	files.

2006-10-18  Roman Kennke  <kennke@aicas.com>

	PR 29448
	* java/awt/Window.java
	(eventTypeEnabled): Overridden to handle WindowEvents.
	(processEvent): Switch between processWindowEvent(),
	processWindowFocusEvent() and processWindowStateEvent() here,
	rather than simply calling processWindowEvent().
	(processWindowEvent): Only dispatch event to listener, do not